# svp_lab

./: CMakeLists.txt  main.cpp
src/data/datasource/: CMakeLists.txt  weather_data_handles.cpp  weather_data_source.cpp  weather_data_source.hpp  weather_data_validation.cpp
src/data/model/: CMakeLists.txt  weather_model.cpp  weather_model.hpp
src/data/repository/: CMakeLists.txt  repository.cpp  repository.hpp
src/ui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  first_page.cpp  first_page.hpp  weather_info_dialog.cpp  weather_info_dialog.hpp
tests/: CMakeLists.txt
tests/repository_tests_src/: main.cpp  repository_test.cpp  repository_test.hpp
tests/weather_data_tests_src/: main.cpp  weather_data_test.cpp  weather_data_test.hpp
tests/weather_model_src/: main.cpp  weather_model_test.cpp  weather_model_test.hpp
